--- a/frontend/orchestrai/pubspec.yaml
+++ b/frontend/orchestrai/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
     - assets/agent_3.png
     - assets/agent_4.png
     - assets/agent_default.png
-    - assets/head_default.png
+    - assets/head_5.png
     - assets/body_default.png
     - assets/tool_default.png
     - assets/head_1.png
